# Boondock-Airband

./: CMakeLists.txt  CONFIGURATION.md  DEPLOYMENT.md  Dockerfile  NOAA 162.550_20260116_14.txt  README.md  boondock_airband  boondock_airband.conf  channels.json  rebuild.sh
config/: basic_multichannel.conf  basic_scanning.conf  mixers.conf  two_dongles_multiple_outputs.conf
init.d/: rtl_airband-debian.sh  rtl_airband-freebsd.sh  rtl_airband-gentoo.sh  rtl_airband.service
scripts/: find_version
src/: CMakeLists.txt  afc.h  boondock_airband.cpp  boondock_airband.h  capture_process.cpp  capture_process.h  config.cpp  config_utils.cpp  config_utils.h  demod_init.cpp  demod_init.h  demod_math.cpp  demod_math.h  demodulate.cpp  demodulate.h  helper_functions.cpp  input-file.cpp  input-helpers.cpp  input-mirisdr.cpp  input-rtlsdr.cpp  input-soapysdr.cpp  input-soapysdr.h  logging.h  mixer.cpp  output.cpp  pulse.cpp  rtl_airband.cpp  signal_handling.cpp  signal_handling.h  udp_stream.cpp  util.cpp  web_server.cpp  web_server.h  web_spectrum.js  web_ui.css  web_ui.html  web_ui.js
src/CMakeModules/: version.cmake
src/hello_fft/: CMakeLists.txt  mailbox.c
webapp/: server.py
webapp/templates/: index.html
